Added bootstrap and implemented new theme

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,12 +1,23 @@
-<h3>
-  <a routerLink="/">Home</a>
-  <a routerLink="/protected">Protected</a>
-  <ng-template [ngIf]="user">
-    <a routerLink="" (click)="logout()">Logout</a>
-  </ng-template>
-  <ng-template [ngIf]="!user">
-    <a routerLink="" (click)="login()">Login</a>
-  </ng-template>
-</h3>
+<nav class="navbar navbar-expand-sm bg-light">
+  <a class="navbar-brand" routerLink="/">Angular OIDC Example</a>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/protected">Protected</a>
+    </li>
+    <ng-template [ngIf]="user">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="" (click)="logout()">Logout</a>
+      </li>
+    </ng-template>
+    <ng-template [ngIf]="!user">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="" (click)="login()">Login</a>
+      </li>
+    </ng-template>
+  </ul>
+</nav>
 
-<router-outlet></router-outlet>
+<div class="container-fluid">
+  <router-outlet></router-outlet>
+</div>
+
